--- a/HTMLBasic.html
+++ b/HTMLBasic.html
@@ -1,8 +1,10 @@
 <html>
 <head>
 <title> DEMO_HTML </title>
+<link href="MyStyle.css" rel="StyleSheet"/>
 </head>
 <body>
+<div id="div3">
 Welcome to HTML_NO TAG
 <h1>Welcome to HTML TAG H1</h1>
 <h2>Welcome to HTML TAG H2 </h2>
@@ -10,9 +12,10 @@ Welcome to HTML_NO TAG
 <h4>Welcome to HTML TAG H4</h4>
 <h5>Welcome to HTML TAG H5</h5>
 <h6>Welcome to HTML TAG H6 </h6>
-<p>
+</div>
+<p><p id="p">
 Nelson Mandela and Martin Luther King Jr. both fought for racial equality. Although Luther King was an American citizen and Mandela a native South African, their dreams were the same. The intolerance of white people towards black co-inhabitants was the catalyst for years of activism. Their battles were tumultuous – Nelson Mandela was arrested in 1962 for treason. Consequently, he was incarcerated for twenty-seven years. In contrast, although Luther King was detained several times, the longest jail sentence he received was four months. Both Mandela and Luther King have been awarded the Nobel Peace Prize for their dedication to improving civil rights for black people. Martin Luther King Jr.
-</p>
+</p></p>
 
 <pre>
 Nelson Mandela and Martin Luther King Jr. both fought for racial equality. 
@@ -23,6 +26,7 @@ In contrast, although Luther King was detained several times, the longest jail s
 Both Mandela and Luther King have been awarded the Nobel Peace Prize for their dedication to improving civil rights for black people. 
 Martin Luther King Jr.
 </pre>
+<div id="div1">
 <u>Sample text underline</u><br/>
 <b>Sample text bold</b><br/>
 <i>Sample text italic</i><br/>
@@ -31,7 +35,8 @@ Martin Luther King Jr.
 <del>Sample text delete</del><br/>
 10<Sup>4</Sup><br/>
 H<Sub>2</Sub>o
-
+</div>
+<div id="div2">
 <ol type="A">
 <li>Apple</li>
 <li>Banana</li>
@@ -74,6 +79,7 @@ H<Sub>2</Sub>o
 <li>Mango</li>
 <li>Papaya</li>
 </ul>
+</div>
 
 <table border="10">
 <tr>
